--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </div>
 	<br><br>
   <button onclick="play()" id="btnplay">Play</button>
+	 <button onclick="pause()" id="btnpause">Pause</button>
 </center>
 
 <script src="main.js"></script>
